fix layout issues with xs

--- a/client/components/map/drawer.scss
+++ b/client/components/map/drawer.scss
@@ -23,20 +23,23 @@
     top: 0;
     height: 100%;
     width: 100%;
+    right: -480px;
     margin-bottom: 0;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: -5px 0 15px rgba(43, 47, 51, 0.6);
-    transition: transform 0.3s linear;
+    transition: all 0.3s linear;
+    z-index: 1000;
     &.ac-drawer--expanded {
         right: 0;
     }
     .ac-drawer-body {
+        height: 100%;
         overflow-y: scroll;
         overflow-x: auto;
     }
     .ac-drawer-close {
         position: absolute;
-        top: 80px;
+        top: 10px;
         right: 10px;
         color: rgb(177, 177, 177);
         cursor: pointer;
